--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,6 +46,32 @@
   </div>
 </div>
 
+<div class="is-bg-black is-white">
+  <div class="row align-center is-bg-black is-white">
+    <div class="column space-3 large-10">
+      <div class="row is-bg-black is-white align-center align-middle">
+        <div class="column space-3 small-12 large-2 large-centered">
+          <div class="row is-bg-black is-white">
+            <div class="column small-12 text-center">
+              <img src="/images/11b-whitepaper@2x.png" alt="Benchmarking a Content Services Platform at 11 Billion Documents" height="160" style="max-height: 300px;">
+            </div>
+          </div>
+        </div>
+        <div class="column small-12 large-10 large-centered">
+          <div class="row is-bg-black is-white space-bottom-3 align-center text-center">
+            <div class="column space-top-3 small-12 large-9 large-text-left">
+              <h4>Benchmarking a Content Services Platform at 11 Billion Documents</h4>
+            </div>
+            <div class="column space-top-3 small-12 large-3 large-text-right">
+              <a href="https://www.nuxeo.com/resources/benchmarks-11b/" class="button is-bg-blue">Get the PDF</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="row align-center is-bg-grey is-black">
   <div class="column space-3 large-10 large-centered">
     <h3>Latest blog posts</h3>
@@ -53,43 +79,47 @@
   </div>
 </div>
 
-<div class="row align-center is-bg-aqua-light is-black">
-  <div class="column large-8 large-centered space-3">
-    <div class="row small-text-center-only is-bg-aqua-light">
-      <div class="column small-12 medium-6">
-        <h3 class="space-top-2">About Nuxeo</h3>
-        <p class="medium-9">
-          We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.
-        </p>
-      </div>
-      <div class="column small-12 medium-6">
-        <div class="column space-top-3">
-          <a href="https://www.nuxeo.com/about/why-nuxeo/" class="button button--arrow is-bg-aqua">Our Vision</a>
+<div class="is-bg-aqua-light is-black">
+  <div class="row align-center is-bg-aqua-light is-black">
+    <div class="column large-8 large-centered space-3">
+      <div class="row small-text-center-only is-bg-aqua-light">
+        <div class="column small-12 medium-6">
+          <h3 class="space-top-2">About Nuxeo</h3>
+          <p class="medium-9">
+            We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.
+          </p>
         </div>
-        <div class="column space-top-2 space-bottom-2">
-          <a href="https://www.nuxeo.com/about/" class="button button--arrow is-bg-aqua">Our Mission</a>
+        <div class="column small-12 medium-6">
+          <div class="column space-top-3">
+            <a href="https://www.nuxeo.com/about/why-nuxeo/" class="button button--arrow is-bg-aqua">Our Vision</a>
+          </div>
+          <div class="column space-top-2 space-bottom-2">
+            <a href="https://www.nuxeo.com/about/" class="button button--arrow is-bg-aqua">Our Mission</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row align-center is-black">
-  <div class="column large-8 large-centered space-3">
-    <div class="row small-text-center-only">
-      <div class="column small-12 medium-6">
-        <h3 class="space-top-2">Want to go Further</h3>
-        <p class="medium-9"></p>
-      </div>
-      <div class="column small-12 medium-6">
-        <div class="column space-top-3">
-          <a href="https://www.nuxeo.com/request-demo/" class="button button--arrow is-bg-blue">Request a demo</a>
+<div class="is-bg-white is-black">
+  <div class="row align-center is-black">
+    <div class="column large-8 large-centered space-3">
+      <div class="row small-text-center-only">
+        <div class="column small-12 medium-6">
+          <h3 class="space-top-2">Want to go Further</h3>
+          <p class="medium-9"></p>
         </div>
-        <div class="column space-top-2 space-bottom-2">
-          <a href="https://www.nuxeo.com/contact/" class="button button--arrow is-bg-blue">Contact Us</a>
-        </div>
-        <div class="column space-top-2 space-bottom-2">
-          <a href="https://www.nuxeo.com/downloads/" class="button button--arrow is-bg-blue">Download the Nuxeo Platform</a>
+        <div class="column small-12 medium-6">
+          <div class="column space-top-3">
+            <a href="https://www.nuxeo.com/request-demo/" class="button button--arrow is-bg-blue">Request a demo</a>
+          </div>
+          <div class="column space-top-2 space-bottom-2">
+            <a href="https://www.nuxeo.com/contact/" class="button button--arrow is-bg-blue">Contact Us</a>
+          </div>
+          <div class="column space-top-2 space-bottom-2">
+            <a href="https://www.nuxeo.com/downloads/" class="button button--arrow is-bg-blue">Download the Nuxeo Platform</a>
+          </div>
         </div>
       </div>
     </div>
