--- a/assets/scss/components/_typography.scss
+++ b/assets/scss/components/_typography.scss
@@ -16,3 +16,19 @@ a, a:link, a:visited {
 p {
   color: inherit;
 }
+
+button,
+a.button,
+input[type="submit"] {
+  border: 0 !important;
+  border-radius: 0;
+  min-width: max-content;
+
+  &.is-bg-blue {
+    &:hover {
+      background: darken($c-blue, $hover-darken-percentage) !important;
+      border: 0 !important;
+      color: $c-white;
+    }
+  }
+}
