--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,11 @@
 <nx-header name="Benchmarks" homelabel="Benchmarks Home">
   <nx-header--menu-item href="{{ .Site.BaseURL }}milestone/index.html">Milestones</nx-header--menu-item>
   <nx-header--menu-item href="{{ .Site.BaseURL }}continuous/index.html">Continuous</nx-header--menu-item>
+  <nx-header--menu-item href="{{ .Site.BaseURL }}workbench/index.html">Workbench</nx-header--menu-item>  
   <nx-header--menu-item href="{{ .Site.BaseURL }}misc/index.html">Misc</nx-header--menu-item>
-  <nx-header--menu-item href="{{ .Site.BaseURL }}workbench/index.html">Workbench</nx-header--menu-item>
   <nx-header--menu-item href="{{ .Site.BaseURL }}custom/index.html" classes="end-of-section">Custom</nx-header--menu-item>
   <nx-header--menu-item href="{{ .Site.BaseURL }}infra/index.html">Infrastructure</nx-header--menu-item>
-  <nx-header--menu-item href="{{ .Site.BaseURL }}scenarios/index.html" classes="end-of-section">Scenarios</nx-header--menu-item>
+  <nx-header--menu-item href="{{ .Site.BaseURL }}scenarios/index.html">Scenarios</nx-header--menu-item>
+  <nx-header--menu-item href="{{ .Site.BaseURL }}11-billion-benchmark-story" classes="end-of-section">11B Benchmarks</nx-header--menu-item>
   <nx-header--menu-item href="/password-request" classes="is-red">Request Password</nx-header--menu-item>
 </nx-header>
