--- a/layouts/section/workbench.html
+++ b/layouts/section/workbench.html
@@ -1,10 +1,10 @@
 {{ partial "head.html" . }}
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
-<div class="hero row padded is-bg-blue is-white">
+<div class="row padded is-bg-blue is-white">
   <div class="large-8 medium-10 small-12 columns">
     <h1>Workbench Benchmarks results</h1>
-    <p class="larger is-white">
+    <p class="is-white">
       These are internal dev benchmarks.
     </p>
   </div>
