--- a/themes/hyde/layouts/_default/single.html
+++ b/themes/hyde/layouts/_default/single.html
@@ -2,7 +2,7 @@
 	<body class="{{ .Site.Params.themeColor }}">
 	 {{ partial "header.html" . }}
 
-   <div class="hero row padded is-bg-blue is-white">
+   <div class="row padded is-bg-blue is-white">
      <div class="large-8 medium-10 small-12 columns">
        <h1>{{ .Title }}</h1>
      </div>
