--- a/assets/scss/marketo.scss
+++ b/assets/scss/marketo.scss
@@ -4,46 +4,36 @@
 
 $info-border: $c-navy;
 $info-background: $c-blue;
+$c-placeholder: rgba($c-menu-black, 0.4);
 
 /* stylelint-disable selector-no-qualifying-type, selector-class-pattern, selector-max-compound-selectors, no-descending-specificity */
 .form-sec .mktoForm {
   * {
-    font-family: $font-primary;
+    font-family: $font-primary !important;
+
+    @supports (font-variation-settings: normal) {
+      font-family: $font-primary-var !important;
+    }
   }
 
   .mktoForm--hidden {
     display: none;
   }
 }
-
 .form-sec.marketo-update .mktoForm {
   max-width: 600px;
   overflow-x: hidden;
   overflow-y: auto;
-  padding-right: 1rem;
+  padding-right: 0;
   // Fix space after banner
   padding-top: 5px;
   position: relative;
   width: 100% !important;
 
-  .mktoFormRow {
-    margin-top: 5px;
-  }
-
-  .mktoButtonRow {
-    display: block;
-    margin-top: 1rem;
-
-    span {
-      button {
-        margin: 0 auto !important;
-      }
-    }
-  }
-
   .mktoFormCol {
     float: none;
-    margin: 0;
+    margin: 0 !important;
+    min-height: 0;
     width: auto !important;
   }
 
@@ -52,35 +42,33 @@ $info-background: $c-blue;
     margin-top: 2rem;
 
     > legend {
-      font-size: 22px;
-      font-weight: $weight-medium;
       color: $c-black;
+      font-size: $font-size-5;
+      font-weight: $weight-bold;
       margin: 0;
       padding: 2rem 0 0;
     }
   }
 
   .mktoField {
-    color: $c-grey-3;
-    font-size: 18px !important;
+    color: $c-menu-black;
+    font-size: $font-size-1 !important;
     font-style: normal;
     max-width: 600px !important;
     width: 100% !important;
 
     &[type='checkbox'],
     &[type='radio'] {
-      position: absolute;
       width: auto !important;
     }
   }
 
   textarea.mktoField,
   select.mktoField {
-    -moz-appearance: none !important;
     appearance: none !important;
 
     option {
-      color: $c-grey-3;
+      color: $c-menu-black;;
     }
   }
 
@@ -89,29 +77,18 @@ $info-background: $c-blue;
     position: relative;
     width: 100% !important;
 
-    label {
-      color: $c-blue;
+    .mktoLabel {
+      color: $c-menu-black;
+      font-size: $font-size-1;
+      font-weight: $weight-roman;
+      line-height: 1.67;
       max-width: 98%;
-    }
-
-    > .mktoLabel {
-      background: $white;
-      font-size: 1.2em;
-      font-weight: normal;
       width: auto !important;
 
-      .is-bg-grey & {
-        background: $c-grey;
+      .mktoAsterix,
+      &:empty {
+        display: none;
       }
-
-      .mktoAsterix {
-        float: right;
-        padding: 0 0 0 0.5em;
-      }
-    }
-
-    .mktoHtmlText {
-      width: auto !important;
     }
 
     .mktoCheckboxList,
@@ -120,13 +97,16 @@ $info-background: $c-blue;
       clear: both;
       display: flex;
       flex-wrap: wrap;
-      padding: 0.5rem 0;
+      padding: 0;
       width: 100% !important;
 
       label {
-        color: $c-grey-3;
+        color: $c-menu-black;
+        font-size: $font-size-1;
+        margin-left: 0;
+        padding-left: 1rem;
         transition: color 0.2s ease;
-        width: calc(100% - 3rem);
+        width: calc(100% - 2rem);
 
         &:hover {
           color: $c-blue;
@@ -141,47 +121,22 @@ $info-background: $c-blue;
       label,
       input {
         cursor: pointer;
-      }
-    }
-
-    input,
-    select,
-    textarea {
-      box-shadow: none;
-      height: auto;
-      line-height: 1.2em;
-
-      ~.mktoLabel {
-        display: block;
-        left: 0;
-        padding: 0 0.4rem;
-        position: absolute;
-        top: 0.8rem;
-        transition: all 0.2s ease, left 0.2s ease, font-size 0.2s ease;
-      }
-
-      &.mktoInvalid ~ .mktoLabel {
-        color: $c-red;
+        margin-bottom: 0.375rem; // 6px;
       }
     }
 
     input {
-      border: 1px solid $c-grey-1;
-      padding: 0.6rem 0.6rem 0.3rem !important;
+      padding: 0.75rem 1rem !important;
 
-      &:focus ~ .mktoLabel,
-      &.filled ~ .mktoLabel {
-        font-size: 0.8em;
-        left: 0.5rem;
-        top: -0.4rem;
+      &::placeholder {
+        color: $c-placeholder !important;
       }
     }
 
     select,
     textarea {
-      border: 1px solid $c-grey-1;
       font-style: normal;
-      padding: 0.6rem 0.5rem 0.4rem !important;
+      padding: 0.75rem 1rem !important;
 
       .ie9 & {
         background: none;
@@ -191,31 +146,32 @@ $info-background: $c-blue;
         font-style: normal;
 
         &[value=''] {
+          color: $c-placeholder;
           display: none;
         }
       }
 
-      ~ .mktoLabel {
-        font-size: 0.8em;
-        left: 0.5rem;
-        top: -0.4rem;
-      }
-
       &::placeholder {
-        color: $c-blue;
+        color: $c-placeholder !important;
       }
     }
 
     select:not([multiple]) {
-      background: url('/images/form-select-arrow-grey.png') no-repeat;
-      background-position: calc(100% - 0.5rem) 1.2rem;
-      background-size: 1rem;
-      color: $c-blue;
-      cursor: pointer;
-      padding-right: 1.8rem !important;
+      appearance: none;
+      background-color: $c-form-background;
+      background-image: url('/assets/imgs/form-down-arrow.png');
+      background-position: calc(100% - 1.1875rem) 1.1rem;
+      background-repeat: no-repeat;
+      background-size: 0.625rem 0.375rem;
+      color: $c-menu-black;
+      padding: 0.75rem 1.8rem calc(1rem - 4px) 0.75rem !important;
 
       &.mktoValid {
         color: $c-grey-3;
+      }
+
+      &:focus {
+        outline-color: $c-grey-3;
       }
     }
 
@@ -224,27 +180,59 @@ $info-background: $c-blue;
       // margin-top: -0.4rem; // in modals
       resize: vertical;
     }
-  }
 
-  input {
-    &::placeholder {
-      opacity: 0;
+    .mktoHtmlText {
+      width: auto !important;
+
+      p {
+        color: $c-menu-black !important;
+        font-size: $font-size-0 !important;
+        text-align: center;
+      }
+    }
+
+    input:not([type='checkbox']):not([type='radio']),
+    select,
+    textarea {
+      background: #e0ecfd66;
+      border-bottom: 1px solid transparent;
+      border-left: 0;
+      border-right: 0;
+      border-top: 0;
+      margin-bottom: 0.25rem;
+      transition: all 0.2s ease;
+
+      &:hover,
+      &:focus {
+        border-bottom-color: $c-grey-3;
+      }
+
+      &:focus {
+        outline: none;
+      }
     }
   }
 
+  .mktoButtonRow {
+    margin-top: 1rem;
+    width: 100%;
+  }
+
   .mktoButtonWrap {
+    margin-left: 0 !important;
+
     .mktoButton {
       background: $c-blue !important;
-      border: none !important;
-      border-radius: 0 !important;
+      border: 0 !important;
+      border-radius: $cta-radius !important;
       box-shadow: none !important;
       color: $white;
-      font-size: 15px !important;
-      font-weight: bold;
+      font-size: $font-size-3 !important;
+      font-weight: $weight-bold;
       height: auto !important;
-      margin: 28px auto 0;
-      min-width: 217px !important;
-      padding: 10px 0 !important;
+      line-height: 1.4;
+      min-width: 150px !important;
+      padding: 0.75rem 1.875rem !important;
       text-shadow: none !important;
       text-transform: none !important;
       width: 100% !important;
@@ -253,20 +241,10 @@ $info-background: $c-blue;
         background: darken($c-blue, $hover-darken-percentage) !important;
       }
     }
-  }
 
-  .mktoButtonWrap.mktoDownloadButton .mktoButton:active {
-    background: $c-blue !important;
-  }
-
-  .mktoFieldWrap input.mktoInvalid ~ .mktoLabel,
-  .mktoFieldWrap select.mktoInvalid ~ .mktoLabel,
-  .mktoFieldWrap textarea.mktoInvalid ~ .mktoLabel {
-    color: $c-blue;
-  }
-
-  .mktoFieldWrap .mktoLabel .mktoAsterix {
-    display: none;
+    &.mktoDownloadButton .mktoButton:active {
+      background: $c-blue !important;
+    }
   }
 
   .mktoTemplateBox p {
@@ -275,44 +253,15 @@ $info-background: $c-blue;
     width: 100%;
   }
 
-  padding-right: 0;
-
   .mktoOffset {
     height: 0;
   }
 
-  .mktoFormCol {
-    margin: 0 !important;
-  }
-
-  .mktoFieldWrap {
-    .mktoHtmlText {
-      p {
-        color: $c-barely-black !important;
-      }
-    }
-
-    input:not([type='checkbox']):not([type='radio']),
-    select,
-    textarea {
-      border-left: 0;
-      border-right: 0;
-      border-top: 0;
-      margin-bottom: 0.8rem;
-
-      &:focus {
-        outline: 1px solid $c-grey-3;
-        outline-offset: -1px;
-      }
-    }
-  }
-
   .mktoError {
-    background: $white;
     bottom: auto !important;
-    padding: 0 0.4rem;
-    right: 0.5rem !important;
-    top: -0.7rem;
+    padding: 0;
+    right: 0 !important;
+    top: 0.1rem;
     z-index: 20;
 
     .mktoErrorArrow {
@@ -327,13 +276,12 @@ $info-background: $c-blue;
       border: 0 !important;
       border-radius: 0;
       box-shadow: none;
-      color: $c-red !important;
+      color: $c-form-error !important;
       display: inline;
-      font-size: 12px;
+      font-size: $font-size-1;
       margin: 0;
       padding: 0;
       text-shadow: none;
-      text-transform: uppercase;
 
       .mktoErrorDetail {
         display: inline;
@@ -342,17 +290,12 @@ $info-background: $c-blue;
     }
   }
 
-  .mktoButtonWrap {
-    margin-left: 0 !important;
+  select,
+  textarea {
+    + .mktoError {
+      top: -0.7rem;
+    }
   }
 }
-
-// Grey background tweak
-.form-sec.marketo-update .is-bg-grey .mktoForm {
-  .mktoFieldWrap .mktoLabel {
-    background: $c-grey;
-  }
-}
-
 
 /* stylelint-enable */
