--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -3,7 +3,7 @@
 {{ partial "header.html" . }}
 {{ $data := .Params.build_number }}
 
-  <div class="hero row padded is-bg-blue is-white">
+  <div class="row padded is-bg-blue is-white">
     <div class="large-8 medium-10 small-12 columns">
       <h1>
       {{ (index .Site.Data.bench $data).bench_suite }} <span
@@ -12,7 +12,7 @@
         <span class="tag kafka">Kafka</span>
         {{ end }}
       </h1>
-      <p class="larger is-white">
+      <p class="is-white">
         {{ .Date.Format "Mon, Jan 2, 2006" }}
       </p>
     </div>
