--- a/layouts/page/post.html
+++ b/layouts/page/post.html
@@ -2,7 +2,7 @@
 <body class="{{ .Site.Params.themeColor }}">
   {{ partial "header.html" . }}
 
-  <div class="hero row align-center paddedt1 is-bg-blue is-white">
+  <div class="row align-center paddedt1 is-bg-blue is-white">
     <div class="columns small-12 medium-10 large-8">
       <h1>{{ .Title }}</h1>
     </div>
