--- a/layouts/section/continuous.html
+++ b/layouts/section/continuous.html
@@ -2,10 +2,10 @@
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
 
-<div class="hero row padded is-bg-blue is-white">
+<div class="row padded is-bg-blue is-white">
   <div class="large-8 medium-10 small-12 columns">
     <h1>Continous Benchmarks Results</h1>
-    <p class="larger is-white">
+    <p class="is-white">
       The weekly Continuous Integration Benchmark results go here. You can click on the link of the first cell on each row to have the complete resultset of the corresponding benchmark.
     </p>
   </div>
