--- a/layouts/page/landing.html
+++ b/layouts/page/landing.html
@@ -4,11 +4,11 @@
 
 <div class="row align-center is-black">
   <div class="small-12 medium-6 large-4 columns space-top-3 text-center">
-    <h1 class="h2">{{ .Title }}</h1>
+    <h1 class="display">{{ .Title }}</h1>
   </div>
 </div>
 
-<div class="row align-center is-black">
+<div class="row align-center is-black pad-bottom">
   <div class="small-12 medium-6 large-4 columns space-bottom-3 text-center">
     <div class="content container">
       {{ .Content }}
