--- a/layouts/page/post.html
+++ b/layouts/page/post.html
@@ -2,13 +2,15 @@
 <body class="{{ .Site.Params.themeColor }}">
   {{ partial "header.html" . }}
 
-  <div class="row align-center paddedt1 is-bg-blue is-white">
-    <div class="columns small-12 medium-10 large-8">
-      <h1>{{ .Title }}</h1>
+  <div class="is-bg-blue is-white">
+    <div class="row align-center pad">
+      <div class="columns small-12 medium-10 large-8">
+        <h1 class="display">{{ .Title }}</h1>
+      </div>
     </div>
   </div>
 
-  <div class="row align-center is-black paddedt1">
+  <div class="row align-center pad">
     <div class="columns small-12 medium-10 large-8">
       {{ .Content }}
     </div>
@@ -18,5 +20,3 @@
 
 </body>
 </html>
-
-abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz.
