--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -7,7 +7,6 @@
 a,
 a img,
 .button.button--arrow {
-  border-radius: 0;
   border: 0 !important;
   transition: filter 0.25s ease-out;
 }
@@ -67,23 +66,28 @@ a:hover img,
 }
 
 .button.button--arrow {
-  height: 50px;
+  border-radius: $cta-radius;
   font-size: 1.125rem;
-  font-weight: 600;
-  line-height: 50px;
+  font-weight: $weight-bold;
+  line-height: 50px !important;
   max-width: 310px;
-  padding: 0;
+  min-height: 50px;
+  padding: 0 !important;
   position: relative;
+  transition: all 0.2s ease !important;
   width: 100%;
 
   &::after {
     border: 0;
+    border-bottom-right-radius: $cta-radius;
+    border-top-right-radius: $cta-radius;
     content: '\2192';
-    right: -40px;
     height: 50px;
-    width: 50px;
     line-height: 50px;
     position: absolute;
+    right: -40px;
+    top: 0;
+    width: 50px;
   }
 
   &.is-bg-blue::after {
@@ -99,18 +103,6 @@ a:hover img,
   &.is-bg-purple::after {
     background: $c-grey;
     color: $c-purple;
-  }
-}
-
-.more {
-  font-size: 0.75rem;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-
-  &::before {
-    content: '\2192  ';
-    font-size: 1.3em;
   }
 }
 
@@ -131,54 +123,35 @@ a:hover img,
 }
 
 .boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 -1rem
-}
-
-a.box {
-  color: inherit;
-  cursor: pointer;
-}
-
-.box {
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-  padding: 0;
-  transition: box-shadow 0.25s ease-out;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  .boxes--3 & {
-    width: 100%;
-    max-width: calc(33.33% - 2rem);
-    margin: 1rem;
-    min-width: 250px;
+  > .box {
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    transition: all 0.2s ease;
   }
+
+  .more {
+    font-size: 0.75rem;
+    font-weight: $weight-roman;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+}
+
+.blog-section .box {
+  padding: 0;
 
   & .box__content {
     margin: 1.5rem;
-
-    h4 {
-      font-size: 18px;
-    }
 
     &.box__content--last {
       margin-top: 0;
     }
   }
-
-  &:hover {
-    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.4);
-  }
 }
 
-@media screen and #{breakpoint(medium down)} {
-  .boxes--3 .box {
-    max-width: inherit;
-  }
-}
 @media screen and #{breakpoint(large)} {
   .large-text-right {
     text-align: right;
