--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
   <div class="row align-center background-for-medium" style="background-image: url('/images/home-illustration.svg');background-size: contain;background-repeat: no-repeat;background-position: center;">
     <div id="home" class="column space-3 large-10 large-centered">
       <div class="text-center">
-        <h2>Nuxeo Performance Benchmarks</h2>
+        <h1 class="display">Nuxeo Performance Benchmarks</h1>
         <p>
           We're open and transparent.
           <br>
@@ -60,7 +60,7 @@
         <div class="column small-12 large-10 large-centered">
           <div class="row is-bg-black is-white space-bottom-3 align-center text-center">
             <div class="column space-top-3 small-12 large-9 large-text-left">
-              <h4>Benchmarking a Content Services Platform at 11 Billion Documents</h4>
+              <h2>Benchmarking a Content Services Platform at 11 Billion Documents</h2>
             </div>
             <div class="column space-top-3 small-12 large-3 large-text-right">
               <a href="https://www.nuxeo.com/resources/benchmarks-11b/" class="button is-bg-blue">Get the PDF</a>
@@ -72,10 +72,12 @@
   </div>
 </div>
 
-<div class="row align-center is-bg-grey is-black">
-  <div class="column space-3 large-10 large-centered">
-    <h3>Latest blog posts</h3>
-    <div class="boxes boxes--3 blog-section"></div>
+<div class="is-bg-grey is-black">
+  <div class="row align-center">
+    <div class="column space-3 large-10 large-centered">
+      <h2>Latest blog posts</h2>
+      <div class="boxes boxes--3 blog-section"></div>
+    </div>
   </div>
 </div>
 
@@ -84,7 +86,7 @@
     <div class="column large-8 large-centered space-3">
       <div class="row small-text-center-only is-bg-aqua-light">
         <div class="column small-12 medium-6">
-          <h3 class="space-top-2">About Nuxeo</h3>
+          <h2 class="space-top-2">About Nuxeo</h2>
           <p class="medium-9">
             We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.
           </p>
@@ -107,7 +109,7 @@
     <div class="column large-8 large-centered space-3">
       <div class="row small-text-center-only">
         <div class="column small-12 medium-6">
-          <h3 class="space-top-2">Want to go Further</h3>
+          <h2 class="space-top-2">Want to go Further</h2>
           <p class="medium-9"></p>
         </div>
         <div class="column small-12 medium-6">
