--- a/layouts/page/requestaccess.html
+++ b/layouts/page/requestaccess.html
@@ -4,13 +4,13 @@
 
 <div class="row align-center is-black">
   <div class="small-12 medium-6 large-4 columns space-top-3 text-center">
-    <h1 class="h2">{{ .Title }}</h1>
+    <h1 class="display">{{ .Title }}</h1>
   </div>
 </div>
 
 <div class="row align-center is-black">
   <div class="small-12 medium-6 large-4 columns space-bottom-3">
-    <div class="content container">
+    <div class="content">
       {{ .Content }}
       {{ partial "passwordform.html" . }}
     </div>
