--- a/layouts/section/custom.html
+++ b/layouts/section/custom.html
@@ -1,18 +1,21 @@
 {{ partial "head.html" . }}
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
-<div class="row padded is-bg-blue is-white">
-  <div class="large-8 medium-10 small-12 columns">
-    <h1>Custom Benchmarks results</h1>
-    <p class="is-white">
-      Here are adhoc benchmark to test different limits.
-    </p>
+
+<div class="is-bg-blue is-white">
+  <div class="row pad">
+    <div class="large-8 medium-10 small-12 columns">
+      <h1 class="display">Custom Benchmarks results</h1>
+      <p class="is-white">
+        Here are adhoc benchmark to test different limits.
+      </p>
+    </div>
   </div>
 </div>
 
-<div class="row is-bg-grey is-black paddedt1 blog-section">
+<div class="row blog-section pad-bottom">
   <div class="small-12 columns">
-    <div class="content container">
+    <div class="content">
       {{ partial "custombenchsuite.html" . }}
     </div>
   </div>
