--- a/themes/hyde/layouts/index.html
+++ b/themes/hyde/layouts/index.html
@@ -2,27 +2,23 @@
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
 
-    <div class="content container">
-<div class="posts">
+  <div class="content">
+    {{ range .Data.Pages }}
+    <div class="post">
+      <h1 class="display post-title">
+        <a href="{{ .Permalink }}">
+          {{ .Title }}
+        </a>
+      </h1>
 
-      {{ range .Data.Pages }}
-  <div class="post">
-    <h1 class="post-title">
-      <a href="{{ .Permalink }}">
-        {{ .Title }}
-      </a>
-    </h1>
+      <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
 
-    <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+      {{ .Content }}
+    </div>
 
-    {{ .Content }}
+    {{ partial "footer.html" . }}
+
+    {{ end }}
   </div>
-
-  {{ partial "footer.html" . }}
-
-  {{ end }}
-</div>
-</div>
-
-  </body>
+</body>
 </html>
