--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -40,6 +40,12 @@
               <div><span>Reindexing</span></div>
             </th>
             <th>
+              <div><span>Cleanup</span></div>
+            </th>
+            <th>
+              <div><span>FullGC</span></div>
+            </th>
+            <th>
             </th>
           </thead>
           <tbody>
