--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -146,6 +146,12 @@
                 <td>
                 <div class="dps"><a href="#reindex">{{ (index .Site.Data.bench $data).reindex_dps }}</a></div>
                 </td>
+                <td>
+                  <div class="times"><a href="#cleanup">{{ (index .Site.Data.bench $data).cleanup_duration }}</a></div>
+                </td>
+                <td>
+                  <div class="times"><a href="#fullgc">{{ (index .Site.Data.bench $data).fullgc_duration }}</a></div>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -588,19 +594,20 @@
       <h3>Full GC</h3>
       <div>Run a Full Garbage Collector on orphan versions, then on orphan binaries.</div>
       <dl>
-        <dt>Version Documents before GC</dt>
+        <dt>Versions before GC</dt>
         <dd>{{ (index .Site.Data.bench $data).versions_total }}</dd>
-        <dt>Version Documents after GC</dt>
+        <dt>Versions after GC</dt>
         <dd>{{ (index .Site.Data.bench $data).versions_retained }}</dd>
-        <dt>Duration of Versions GC</dt>
-        <dd class="times">{{ (index .Site.Data.bench $data).fullgc_versionfullgc_duration }}</dd>
-
         <dt>Binaries before GC</dt>
         <dd>{{ (index .Site.Data.bench $data).binaries_total }}</dd>
         <dt>Binaries after GC</dt>
         <dd>{{ (index .Site.Data.bench $data).binaries_retained }}</dd>
+        <dt>Duration</dt>
+        <dd class="times">{{ (index .Site.Data.bench $data).fullgc_duration }}</dd>
+        <dt>Duration of Versions GC</dt>
+        <dd class="avg">{{ (index .Site.Data.bench $data).fullgc_versionfullgc_avg }}</dd>
         <dt>Duration of Binaries GC</dt>
-        <dd class="times">{{ (index .Site.Data.bench $data).fullgc_binaryfullgc_duration }}</dd>
+        <dd class="avg">{{ (index .Site.Data.bench $data).fullgc_binaryfullgc_avg }}</dd>
       </dl>
       <dd>
         {{ if ne (index .Site.Data.bench $data).fullgc_getbinaryfullgcstatus_end nil }}
@@ -608,7 +615,7 @@
            href="{{ $datadog_url }}?from_ts={{ (index .Site.Data.bench $data).fullgc_start }}&to_ts={{ (index .Site.Data.bench $data).fullgc_getbinaryfullgcstatus_end }}&live=false">» Datadog monitoring</a>
         {{ end }}
         <a class="tag" target="_blank"
-           href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim90cleanup/detail/index.html">» Gatling report</a>
+           href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim90fullgc/detail/index.html">» Gatling report</a>
       </dd>
 
       {{ if and (isset .Site.Params "disqusShortname") (ne .Site.Params.disqusShortname "") }}
